# polysophia

./: .gitignore  pyproject.toml
examples/LAM/: builder.py  publisher.py  sample.py  server.py
src/polysophia/: __init__.py
src/polysophia/core/: __init__.py  connection.py  data.py  memory.py
src/polysophia/sensors/: camera.py
