[project]
name = "polysophia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.114.2",
    "graphviz>=0.20.3",
    "langchain-core>=0.3.0",
    "loguru>=0.7.2",
    "numpy>=2.1.1",
    "pydantic>=2.9.1",
    "torch>=2.4.1",
    "transformers>=4.44.2",
    "uvicorn>=0.30.6",
    "websockets>=13.0.1",
]

[project.optional-dependencies]
cam = [
    "opencv-python>=4.10.0.84",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "datasets>=3.0.0",
    "jupyterlab>=4.2.5",
    "ruff>=0.6.5",
]
